add payment method for supplier different from customer

--- a/purchase_order_extended/i18n/it.po
+++ b/purchase_order_extended/i18n/it.po
@@ -19,3 +19,13 @@ msgstr ""
 #: field:purchase.order.line,sequence:0
 msgid "Line #"
 msgstr "Nr. linea"
+
+#. module: purchase_order_extended
+#: field:res.partner,property_payment_term_payable:0
+msgid "Payment Term for Supplier"
+msgstr "Modalità di pagamento per Fornitore"
+
+#. module: purchase_order_extended
+#: help:res.partner,property_payment_term_payable:0
+msgid "This payment term will be used instead of the default one for the current partner for supplier moves."
+msgstr "Questo metodo di pagamento verrà utilizzato rispetto a quello di default per gli acquisti da questo partner."
