--- a/purchase_order_barcode/i18n/it.po
+++ b/purchase_order_barcode/i18n/it.po
@@ -23,7 +23,7 @@ msgstr "Codice a barre"
 #. module: purchase_order_barcode
 #: code:addons/purchase_order_barcode/models/inherit_purchase_order.py:62
 #, python-format
-msgid "Error"
+msgid "Not able to sell product with code {code}"
 msgstr "Not able to sell product with code {code}"
 
 #. module: purchase_order_barcode
