--- a/account_invoice_extended/i18n/it.po
+++ b/account_invoice_extended/i18n/it.po
@@ -107,3 +107,15 @@ msgstr "Vendita"
 #: view:account.invoice:0
 msgid "Sale / Stock Picking"
 msgstr "Vendite / DDT"
+
+#. module: base
+#: model:res.company,overdue_msg:base.main_company
+msgid "Our records indicate that the following payments are still due. If the amount\n"
+"has already been paid, please disregard this notice. However, if you have any\n"
+"queries regarding your account, please contact us.\n"
+"Thank you in advance.\n"
+""
+msgstr "I nostri sistemi indicano che i seguenti pagamenti sono ancora dovuti. Se le fatture sono già stare pagate si prega di ignorare questo avviso.\n"
+"Per domande riguardanti la Sua posizione Vi preghiamo di contattarci.\n"
+"Grazie in anticipo.\n"
+""
