Add security and also search by product

--- a/purchase_requisition_extended/i18n/it.po
+++ b/purchase_requisition_extended/i18n/it.po
@@ -109,3 +109,8 @@ msgstr "Non ci sono fornitori preferenziali"
 #: model:ir.ui.menu,name:base.menu_procurement_management_supplier_name
 msgid "Suppliers"
 msgstr "Fornitori"
+
+#. module: purchase_requisition_extended
+#: field:purchase.requisition,product_id:0
+msgid "Product"
+msgstr "Prodotto"
