--- a/stock_move_extended/i18n/it.po
+++ b/stock_move_extended/i18n/it.po
@@ -71,7 +71,7 @@ msgstr "Vedere Prezzo di Vendita"
 #. module: stock_move_extended
 #: field:stock.move,sell_price:0
 msgid "Sell Price Unit"
-msgstr "Prezzo Riga Ordine Vendita"
+msgstr "Prezzo Lordo Riga di Vendita"
 
 #. module: stock_move_extended
 #: field:stock.move,date_from:0
