--- a/account_invoice_extended/i18n/it.po
+++ b/account_invoice_extended/i18n/it.po
@@ -119,3 +119,12 @@ msgstr "I nostri sistemi indicano che i seguenti pagamenti sono ancora dovuti. S
 "Per domande riguardanti la Sua posizione Vi preghiamo di contattarci.\n"
 "Grazie in anticipo.\n"
 ""
+#. modules: account_invoice_extended
+#: field:account.journal,active:0
+msgid "Active"
+msgstr "Attivo"
+
+#. modules: account_invoice_extended
+#: field:account.journal,sequence:0
+msgid "Sequence"
+msgstr "Sequenza"
