--- a/account_due_list/i18n/it.po
+++ b/account_due_list/i18n/it.po
@@ -122,6 +122,12 @@ msgid "Invoice Date"
 msgstr "Data Fattura"
 
 #. module: account_due_list
+#: view:account.invoice:0
+#: field:account.invoice,to_pay:0
+msgid "To Pay"
+msgstr "Da Pagare"
+
+#. module: account_due_list
 #: view:account.move.line:0
 msgid "Total Credit"
 msgstr "Totale AVERE"
@@ -340,4 +346,29 @@ msgstr "Al"
 #: view:account.move.line:0
 msgid "Open Invoice"
 msgstr "Apri Fattura"
+
+#. module: account_due_list
+#: field:account.move.line,running_balance:0
+msgid "Running Balance"
+msgstr "Saldo Progressivo"
+
+#. module: account_due_list
+#: model:res.groups,name:account_due_list.group_account_invoice_approve_manager
+msgid "Approve To Pay Supplier Invoice / Manager"
+msgstr "Approvazione Pagamento Fatture Fornitori / Manager"
+
+#. module: account_due_list
+#: view:account.invoice:0
+msgid "Disapproves to Pay"
+msgstr "Blocca il Pagamento"
+
+#. module: account_due_list
+#: view:account.invoice:0
+msgid "Approve to Pay"
+msgstr "Approva il Pagamento"
+
+#. module: account_due_list
+#: help:account.invoice,to_pay:0
+msgid "This field will be marked when the purchase manager approve this invoice to be paid, and unmarked if the invoice will be blocked to pay"
+msgstr "Questo campo verrà contrassegnato quando il responsabile acquisti approverà questa fattura e non sarà contrassegnata se la fattura verrà bloccata per il pagamento"
 
